Prevent Recent Projects image from jumping when user change section

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -146,7 +146,7 @@ label {
 }
 
 .emptyCard {
-	margin: 5%;
+	padding: 5%;
 	display: flex;
 	width: 90%;
 	align-items: center;
